fixed: theme switcher align

--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -17,3 +17,7 @@
 .text-red {
   color: $color-icon-down;
 }
+
+.pr {
+  position: relative;
+}
