--- a/sass/components/_theme-switcher.scss
+++ b/sass/components/_theme-switcher.scss
@@ -4,7 +4,7 @@
   width: 6rem;
   height: 3rem;
   border-radius: 20px;
-  position: absolute;
+  // position: absolute;
   top: 13rem;
   right: 5rem;
 
